Migrated to 11ty

--- a/src/services/design_and_engineering.html
+++ b/src/services/design_and_engineering.html
@@ -89,11 +89,11 @@
                 <div class="col-xl-2 col-lg-2 col-md-1">
                   <div class="logo">
                     <!-- logo-1 -->
-                    <a href="../index.html" class="big-logo"
+                    <a href="..//" class="big-logo"
                       ><img src="../assets/img/logo/PREMIER.png" alt=""
                     /></a>
                     <!-- logo-2 -->
-                    <a href="../index.html" class="small-logo"
+                    <a href="..//" class="small-logo"
                       ><img src="../assets/img/logo/loder-logo.png" alt=""
                     /></a>
                   </div>
@@ -103,7 +103,7 @@
                   <div class="main-menu f-right d-none d-lg-block">
                     <nav>
                       <ul id="navigation">
-                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="..//">Home</a></li>
                         <li><a href="../about.html">About</a></li>
                         <li><a href="../project.html">Projects</a></li>
                         <li><a href="../services.html">Services</a></li>
@@ -253,7 +253,7 @@
                 <div class="single-footer-caption mb-30">
                   <!-- logo -->
                   <div class="footer-logo">
-                    <a href="../index.html"
+                    <a href="..//"
                       ><img src="../assets/img/logo/PREMIER.png" alt=""
                     /></a>
                   </div>
